--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -1,18 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13047332.md#1" target="_blank">【重播】影响疫苗效果的3个原因</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13047332.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13047342-6.25.21-web-Health-Live-150x120.jpg" align ="left"></a>打AZ疫苗怕血栓，该如何预防？
-
-打第二剂疫苗隔太久怎么办，两种疫苗混打可行吗？
-
-抑制人的免疫反应、影响疫苗作用有哪3大原因？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 8:02 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13036501.md#1" target="_blank">在日常生活中加些笑点 你该懂的“法式幽默”</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13036501.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13047016-shutterstock_1420630496-150x120.jpg" align ="left"></a>我要回巴黎时，常对大家说“我现在要走路回巴黎。”法国人听到这句话都会微笑说“一路顺风”，回敬我一句玩笑话。日本人却会真的吃惊地问我“咦，朵拉小姐，你是说真的吗？”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 6:28 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046979.md#1" target="_blank">前苏联海军总司令：帽状UFO从海中飞出</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046979.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046990-shutterstock_538968583-150x120.jpg" align ="left"></a>美国海军曾证实，其战机飞行员于2004年在加州外海看到像白色薄荷糖状的不明飞行物（UFO）。而此类的UFO目击事件并非美国海军的专利。据前苏联海军总司令切尔纳温（Vladimir Nikolayevich Chernavin）透露，该国海军也遭遇过多起UFO目击事件，他自己就曾亲眼见到帽状UFO进出海面。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 5:43 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046693.md#1" target="_blank">《美国达人秀》惊现软骨功 老伯缩进小箱子</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046693.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046705-shutterstock_386353318-150x120.jpg" align ="left"></a>《美国达人秀》（America’s Got Talent）节目的参赛者一向以唱歌居多，但有时候会有一些特殊才艺出现。在今年的初赛中，就有一名老年男子表演软骨功。只见他将自己塞进一个小箱子里，让评审与观众看得心惊胆跳，而他也让看似不可能的事情变成可能。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 2:54 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046436.md#1" target="_blank">这种小狗有飞毛腿 跑步时速可达60公里</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046436.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046443-shutterstock_738705256-150x120.jpg" align ="left"></a>萨路基猎犬（Saluki）是最早被人类所饲养的小狗品种之一，可以追溯到2000多年前的古代埃及。这种小狗的跑步速度极快，原本被养来狩猎，但现今多半被当作赛狗。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 1:05 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/17/n13029449.md#1" target="_blank">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/17/n13029449.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13029594-GettyImages-1291379334-150x120.jpg" align ="left"></a>两款mRNA疫苗——辉瑞疫苗和莫德纳疫苗，也出现了心肌炎、心包炎不良事件。目前，CDC正在确认疫苗和心脏发炎的关联，并提示民众出现3种症状要警惕。发生心肌炎、心包炎的案例，有3个特点：1. 主要为年轻男性。3. 第二剂比第一剂发生率高。那么，注射mRNA疫苗后出现心肌炎、心包炎的可能原因是什么？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 7:56 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/23/n13042990.md#1" target="_blank">2种食物是“天然补血剂” 这样吃效果最好</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/23/n13042990.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13045309-date_1599857032-150x120.jpg" align ="left"></a>在中医的观念里，红色食物养心。其实很多红色的食物也能养血，是名副其实的补血剂。比如生活中经常见到的红糖、红枣等，这些都是常用的补血食物。红枣中富有维生素C和叶酸。叶酸是合成血红蛋白的主要原料，维生素C有助于铁元素的吸收和利用，有助于红血球再生。中医则认为红枣有健脾和胃、补益气血作用，许多养生煲汤食谱有加入红枣......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 11:47 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13043221.md#1" target="_blank">最新数据：加国房贷及住房净值贷款数量惊人</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13043221.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044992-iStock_000014897800_Full-150x120.jpg" align ="left"></a>加拿大统计局上周五数据显示，今年4月全国按揭债务新增近180亿元，单月增幅创新高，全国家庭债务总计近2万亿元。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 9:35 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13043219.md#1" target="_blank">房市又一泡沫？ 加拿大郊区房租拉平市区</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13043219.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044963-rent2-150x120.jpg" align ="left"></a>专家忧心，今年加拿大郊区房租与大城市房租拉平的趋势，是继买房市场出现泡沫之后的又一让人不安的迹象。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 9:26 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13043320.md#1" target="_blank">引众怒！加国公寓开发商买独立屋再出租</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13043320.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044866-iStock_000024945580_XXXLarge-150x120.jpg" align ="left"></a>多伦多Core Development公寓开发集团最近被媒体报导大举进军独立屋出租投资领域后，引起众怒，民众这一激烈反应，让Core在内的许多地产界操盘手大感意外。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 9:09 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13043146.md#1" target="_blank">美梦变噩梦 华裔夫妇弃验房后果这样</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13043146.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044804-iStock_000043528992_Full-150x120.jpg" align ="left"></a>对于许多人来说，买房是人生中最大一笔消费，按理说应谨慎行事，签约前应好好验房，确保房屋安全。但房价飞涨，买房竞争激烈，许多人为抢房放弃验房，因此接受接受惨痛教训。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 8:51 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13044629.md#1" target="_blank">【重播】诺瓦瓦克斯疫苗 比mRNA更强？</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13044629.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044643-6.24.21-web-Health-Live-150x120.jpg" align ="left"></a>诺瓦瓦克斯疫苗保护力，超过mRNA疫苗？遇变种病毒更具优势？delta变种传遍全球，另一“新变种”传播29国，又被世卫关注！病毒不断变种，各国应该这样做？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 8:18 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/8/n13006437.md#1" target="_blank">你参加“赚钱的会议”还是“无用的会议”？</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/8/n13006437.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/07/1605121654132483-150x120.jpg" align ="left"></a>要开一场能够讨论赚钱主题的“赚钱会议”，有几个秘诀，其中首要的，就是“会议人数要少”。所谓的“少”，也就是“五人以下”，“六人以上的会议”都是浪费。会议有两种，“赚钱的会议”和“无用的会议”，也可以说分成“为了赚钱而开的会议”和“为了开会而开的会议”这两种。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月24日 5:50 PM			</td></tr>
@@ -41,5 +27,20 @@ Delta变种正蔓延全球，恐掀下一波疫情？......<br><img align="botto
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13039305.md#1" target="_blank">【重播】身体天然降压药？3方法自然降血压</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13039305.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039319-6.22.21-web-Health-Live-150x120.jpg" align ="left"></a>高血压不降，中风、心血管疾病找上门！简单3方法，自然降血压！家里的5种食材，是“天然降压药”！耳朵上有特效降压穴？量血压正确方法，很多人都做错！高血压根本原因是它！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 8:02 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13038939.md#1" target="_blank">出生时存活率0% 世界最早产婴儿庆1岁生日</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13038939.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13038965-baby-1538342_1920-150x120.jpg" align ="left"></a>美国一名男婴在去年6月诞生时，比预产期早了4个多月，这使他成为世界上最早产的婴儿。尽管他被判定存活率为0%，但在医护人员和父母亲的悉心照顾之下，他创造了存活下来的奇迹。如今，他已经度过人生中的第一个生日。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 5:36 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13038598.md#1" target="_blank">母鸡为保护小鸡与蛇拼命 证明母爱伟大</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13038598.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13038611-mother-hen-374128_1920-150x120.jpg" align ="left"></a>天下的妈妈都是一样的，她们会为了保护自己的孩子而做出任何事，即便牺牲生命也在所不惜。从网上最近流传的一段短片就可以看到，一只母鸡为了保护小鸡而与来袭的蛇拼命，充分显现出母爱的伟大。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 3:31 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13038332.md#1" target="_blank">顾客吃咖喱噎到 英国餐厅服务生用这招救他</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13038332.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13038339-shutterstock_1312076798-150x120.jpg" align ="left"></a>在英国北威尔斯（North Wales）的一家印度餐厅，有一名男性顾客在吃咖喱时噎到，顿时呼吸困难。所幸该餐厅一名服务生对他施以急救，帮助他恢复正常呼吸，而该名服务生也因此而被誉为英雄，甚至受到当地警方的表扬。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 1:17 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13037063.md#1" target="_blank">变胖可能是脾虚？3招养好脾 增肌又减肥</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13037063.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13038279-tangshen-tea00-6.20-150x120.jpg" align ="left"></a>增肌、减肥一直是人们的关注话题、努力进行的方向，但有时效果不好，可能与脾虚有关。馥芊中医诊所院长李嘉菱指出，“任何一处的肌肉松弛就是脾虚，例如蝴蝶袖、双下巴、腹部下垂等”，肌少症就是脾虚的一种。外表肥胖也可能跟水肿有关，调脾有助瘦身。但是造成水肿的因素不只脾虚，还有其他原因，建议由医师判断，依体质去调理。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 11:37 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13038028.md#1" target="_blank">时光重溯——加拿大牛仔之路</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13038028.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13038219-20210621-Sunny-bales-06-150x120.jpg" align ="left"></a>提起加拿大的亚伯塔省，人们最先想到的不外乎落基山、牛仔、石油。这个加拿大最富庶的省让人爱，也有人恨。一些所谓的环境保护者曾在全球范围内反对亚省的石油开采，然而更多的人喜爱亚省明媚的阳光和蓝天下熠熠生辉的草原雪山。
+
+牛仔是亚省的特色之一，其中卡尔加里牛仔节被誉为“世界上最大的户外狂欢”，吸引了来自世界各地的游客。其.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 11:34 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/19/n13033696.md#1" target="_blank">咖啡、茶真能消疲劳？医师：改善疲劳关键在这里</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/19/n13033696.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037567-coffee-tea_1430200223-150x120.jpg" align ="left"></a>咖啡、茶叶、能量饮料只能暂时缓和疲劳感，要想真正消除疲劳、恢复体力，必须充分休息，再者是找出疲劳背后的真正原因，例如慢性发炎及相关的病症。喝咖啡或能量饮料的作用是“预支”人体备用能量来应急，而且，原本五脏六腑细胞要关门执行修护工作，你却不让它们休息，长此以往，一旦某天备用能源消耗殆尽，就是猝死的时侯。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月22日 3:33 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/20/n13035326.md#1" target="_blank">拉斯维加斯解封 房价上涨仍处全美低价位?</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/20/n13035326.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037247-shutterstock_1481044307-150x120.jpg" align ="left"></a>文：Ramon吴?拉斯维加斯房地产经纪
+拉斯维加斯地产大王Ramon吴表示，拉斯维加斯正在强势回归，经济大幅向前，对比疫情前，赌场博彩的收益更好，今年三月赌场收益首次突破10亿美元，本月一日正式解封后，收益将会滚雪球般创新高。
+
+虽然拉斯维加斯房地产市场价格已经上涨，但比较全国的价格仍位于低价位，是很多年轻人、I.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 10:31 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13036544.md#1" target="_blank">动物真聪明？ 香港野猪和印度猴子搭乘地铁</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13036544.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13036547-wild-pigs-2424438_1920-150x120.jpg" align ="left"></a>这两天传来香港小野猪和印度猴子会独自搭地铁的消息。其中，香港小野猪还懂得坐博爱座，而且会转车。这不禁让人纳闷，现在的动物是不是越来越聪明了？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 10:03 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13036686.md#1" target="_blank">不用一枪一炮 美军战舰如何反制来袭导弹？</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13036686.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13036690-USS-Mason-150x120.jpg" align ="left"></a>美国海军的战舰拥有精良的防御系统，即便在不启用舰上导弹的情况下，也有多种方法可以让来袭的导弹失效，而不费一枪一炮。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 8:03 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13036297.md#1" target="_blank">英国老妇晋升曾曾曾祖母 享受六代同堂之乐</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13036297.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13036304-shutterstock_114648799-150x120.jpg" align ="left"></a>英国苏格兰一名老妇的曾曾曾孙女刚出生，这使她升格为曾曾曾祖母，而且是苏格兰地区唯一的一名曾曾曾祖母。对于能拥有近百名子孙并享受六代同堂之乐，该名妇女感到相当快乐。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 3:21 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13036072.md#1" target="_blank">美赠台250万剂疫苗 网友论何时能正常生活？</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13036072.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13036106-GettyImages-1233348321-150x120.jpg" align ="left"></a>在台湾民众的引颈期盼之下，搭载美国致赠250万剂莫德纳疫苗的华航货机，于6月20日下午抵达桃园机场。目前台湾已经累积取得超过485万剂疫苗，而后续已洽购的部分也还会分批到货，应可部分缓解燃眉之急。对此，有不少网友讨论要施打多少疫苗，才能恢复往昔正常的生活。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 1:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/11/n13015355.md#1" target="_blank">西澳房产投资翻倍 仍不及繁荣期水平</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/11/n13015355.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13015362-4a9d56f6dc1dffe1e38a768166f8ab7b-150x120.jpg" align ="left"></a>西澳房产投资在过去一年翻了一番多，但仍不及上次繁荣时期水平的一半。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月21日 12:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yqjdaq390/djy/blob/master/gb/news2008_2.md#1<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yqjdaq390/djy/blob/master/gb/news2008_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008_2.htm">https://www.epochtimes.com/gb/news2008_2.htm</a>    （国内需<a href="https://github.com/yqjdaq390/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
