--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -26,6 +26,6 @@
 <h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046730.md#1" target="_blank">冷气温度这样调最省电！6招吹冷气不用怕花钱</a><br></h3>
 <h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13047332.md#1" target="_blank">【重播】影响疫苗效果的3个原因</a><br></h3>
 <h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13048027.md#1" target="_blank">牙周病是吃出来的？3类食物可能是元凶</a><br></h3>
-<h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13052817.md#1" target="_blank">早上喝一杯防便秘 营养师教你做早餐绿拿铁</a><br></h3>
+<h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13052817.md#1" target="_blank">早上喝一杯防便秘 营养师：牛奶和它是黄金组合</a><br></h3>
 <tr><td><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/yqjdaq390/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
